--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-Application.properties
+#Application.properties
 
 spring.datasource.url=jdbc:h2:mem:mydb
 spring.datasource.driverClassName=org.h2.Driver
@@ -8,7 +8,6 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 #enabling the H2 console
 spring.h2.console.enabled=true
-
 
 #persist the data
 #spring.datasource.url=jdbc:h2:file:/data/sampledata
